--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -9,106 +9,4 @@ With the aim to assist research of climatic impacts on forests, the R package **
 
 Spatial interpolation is required when meteorology for the area and period of interest cannot be obtained from local sensors. The nearest weather station may not have data for the period of interest or it may be located too far away to be representative of the target area. Correcting the biases of a meteorological data series containing biases using a more accurate meteorological series is necessary when the more accurate series does not cover the period of interest and the less accurate series does. The less accurate series may be at coarser scale, as with climate model predictions or climate reanalysis data. In this case one can speak of statistical correction adn downscaling. However, one may also correct the predictions of climate models using reanalysis data estimated at the same spatial resolution. 
 
-The following sections describe in detail the design and functioning of the package. An introduction to the package can be found in De Cáceres et al. (2018), but the present document should be preferred for an up-to-date description of the package.
-
-
-## Data structures and functions
-
-### Data structures
-Package **meteoland** assists in the estimation of the following variables over lanscapes (units in parentheses):
-
-+ `DOY`: Day of the year ([1-365]).
-+ `MeanTemperature`: Mean daily temperature (in degrees Celsius).
-+ `MinTemperature`: Minimum daily temperature (in degrees Celsius).
-+ `MaxTemperature`: Maximum daily temperature (in degrees Celsius).
-+ `Precipitation`: Daily precipitation (in mm of water).
-+ `MeanRelativeHumidity`: Mean daily relative humidity (in percent).
-+ `MinRelativeHumidity`: Minimum daily relative humidity (in percent).
-+ `MaxRelativeHumidity`: Maximum daily relative humidity (in percent).
-+ `Radiation`: Incoming radiation (in MJ/m2).
-+ `WindSpeed`: Wind speed (in m/s).
-+ `WindDirection`: Wind direction (in degrees from North).
-+ `PET`: Potential evapo-transpiration (in mm of water).
-
-The package deals with three kinds of spatial structures: individual points, a set of pixels from a spatial grid and full (i.e. complete) grids. The package includes six S4 spatial classes, which are defined as children of classes in package **sp**. 
-
-
-
-#### Topography
-Three classes are defined to represent the variation of topographic features (i.e., elevation, slope and aspect) over space:
-
-+ Class `SpatialPointsTopography` extends `SpatialPointsDataFrame` and represents the topographic features of a set of points in a landscape.
-```{r, echo = FALSE}
-showClass("SpatialPointsTopography")
-```
-+ Class `SpatialGridTopography` extends `SpatialGridDataFrame` and represents the continuous variation of topographic features over a full spatial grid.
-```{r, echo = FALSE}
-showClass("SpatialGridTopography")
-```
-+ Class `SpatialPixelsTopography` extends `SpatialPixelsDataFrame` and represents the continuous variation of topographic features over a set if cells in a grid.
-```{r, echo = FALSE}
-showClass("SpatialPixelsTopography")
-```
-
-Although the three classes have the same slots as their parent S4 classes, data frames in `SpatialPointsTopography`, `SpatialGridTopography` and `SpatialPixelsTopography` objects have only three variables: `elevation` (in meters), `slope` (in degrees) and `aspect` (in degrees from North).
-
-
-
-#### Meteorology
-Analogously to topography, three spatial classes are used to represent the variation of daily meteorology over space:
-
-+ Class `SpatialPointsMeteorology` extends `SpatialPoints` and represents daily meteorology series for a set of points in a landscape.
-```{r, echo = FALSE}
-showClass("SpatialPointsMeteorology")
-```
-+ Class `SpatialGridMeteorology` extends `SpatialGrid` and represents the continuous variation of daily meteorology across a grid of cells.
-```{r, echo = FALSE}
-showClass("SpatialGridMeteorology")
-```
-+ Class `SpatialPixelsMeteorology` extends `SpatialPixels` and represents the variation of daily meteorology for a set of pixels (cells) of a spatial grid.
-```{r, echo = FALSE}
-showClass("SpatialPixelsMeteorology")
-```
-
-In addition to their corresponding inherited slots, `SpatialPointsMeteorology`, `SpatialGridMeteorology` and `SpatialPixelsMeteorology` have two additional slots: `dates` (a vector of days specifying a time period), and `data` (a vector of data frames with the meteorological data). Although the three classes have a `data` slot containing data frames, meteorological data is in different form in each class. In objects of `SpatialPointsMeteorology`, there is one data frame for each point where variables are in columns and dates are in rows. In objects of `SpatialGridMeteorology` and `SpatialPixelsMeteorology`, each data frame describes the meteorology over a complete grid, or a subset of cells, for a single day. In these cases, the data frame has grid cells in rows and variables in columns.
-
-
-### Reading and writing meteorological data
-
-#### Point meteorology
-Objects of class `SpatialPointsMeteorology` are stored in the disk using one data file for each of their spatial points. Files can be stored in **ascii** format or **rds** (compressed) format. Package **meteoland** provides four input/output functions for point meteorology:
-
-+ Function `readmeteorologypoint()` reads the meteorological data stored in one ascii/rds data file and returns a data frame.
-+ Function `writemeteorologypoint()` writes the meteorological data of a single point as an ascii/rds file in the file system.
-+ Function `readmeteorologypointfiles()` reads several ascii/rds files and returns an object of class `SpatialPointsMeteorology`.
-+ Functions `writemeteorologypointfiles()` writes several ascii/rds files in the disk, one per spatial point. Metadata (i.e. the spatial coordinates of each point and the corresponding file path) is stored in an additional file.
-
-#### Grid meteorology
- Objects of class `SpatialGridMeteorology` are stored in the disk using one **netCDF** file per day. In this case, the **netCDF** file also contains the date and spatial projection. The following functions are available for input/output of meteorology over a full grid or on a subset of grid cells:
-
-+ Functions `readmeteorologygrid()` and `readmeteorologypixels()` reads the meteorological data stored in one netCDF file and returns an object of class `SpatialGridDataframe` or `SpatialPixelsDataframe`, respectively.
-+ Functions `writemeteorologygrid()` and `writemeteorologypixels()`  write the meteorological data of the full grid or the subset of grid cells, for a single date in a netCDF file.
-+ Functions `readmeteorologygridfiles()` and `readmeteorologypixelsfiles()` read several netCDF files and returns an object of class `SpatialGridMeteorology` or `SpatialPixelsMeteorology`, respectively.
-+ Functions `writemeteorologygridfiles()` and `writemeteorologypixelsfiles()` write several netCDF files in the disk, one per date, of the full grid or the subset of grid cells. Metadata (i.e. the dates and their corresponding file path) is stored in an additional file.
-
-As a special case, function `readmeteorologygridcells()` reads several netCDF files and returns an object of class `SpatialPointMeteorology` with the meteorological data of a set of specified grid cells.
-
-
-### Visualizing input topography and meteorological data
-
-Although very simple, the package provides two kinds of functions to visualize the temporal and spatial variation of meteorology:
-
-+ Function `spplot()` has been redefined from package **sp** to draw maps of specific weather variables corresponding to specific dates. The function can be used on objects of class `SpatialGridMeteorology` and `SpatialPixelsMeteorology`.
-+ Function `meteoplot()` allows the temporal series of specific variables on specific spatial points to be plotted. The function can read the data from the disk or from objects of class `SpatialPointsMeteorology`.
-
-Similarly, function `spplot()` also accepts objects of classes `SpatialGridTopography` and `SpatialPixelsTopography`, so that topography can also be easily displayed.
-
-
-### Manipulating topographic and meteorological data
-
-Following the design of package **sp**, package meteoland provides functions for switching between spatial structures. For example, it is possible to coerce an object of `SpatialPointsTopography` into a `SpatialPixelsTopography` using a call like `as(x, "SpatialPixelsTopography")`. Subsetting is also allowed, so that estimations of daily meteorology can be performed in subsets of points or grids.
-
-The package provides a few functions to extract/reshape meteorological data:
-
-+ Function `extractgridpoints()` extracts the meteorology of particular points in a grid. It accepts objects of `SpatialGridMeteorology` and `SpatialPixelsMeteorology` as input and it returns an object of `SpatialPointsMeteorology`.
-+ Function `extractpointdates()` extracts the meteorology of a set of dates from an object of class `SpatialPointsMeteorology`. It returns one data frame for each date, with points in rows and meteorology variables in columns.
+The following chapters describe in detail the design and functioning of the package. An introduction to the package can be found in De Cáceres et al. (2018), but the present document should be preferred for an up-to-date description of the package.
